--- a/blog.html
+++ b/blog.html
@@ -89,12 +89,12 @@
                             <a href="blog-details.html" class="btn btn-warning">اقرأ المزيد</a>
                         </div>
                         <div class="blog-img">
-                            <img src="../BS.Project/images/single-blog-image-bg-1.jpg" class="w-100" alt="" />
+                            <img src="images/single-blog-image-bg-1.jpg" class="w-100" alt="" />
                         </div>
                     </div>
                     <div class="jumbotron py-4">
                         <div class="blog-img">
-                            <img src="../BS.Project/images/single-blog-image-bg-2.jpg" class="w-100" alt="" />
+                            <img src="images/single-blog-image-bg-2.jpg" class="w-100" alt="" />
                         </div>
                         <div class="blog-desc">
                             <h4>عنوان المدونة يذهب إلى هنا عنوان المدونة يذهب إلى هنا</h4>
@@ -120,7 +120,7 @@
                             <a href="blog-details.html" class="btn btn-warning">اقرأ المزيد</a>
                         </div>
                         <div class="blog-img">
-                            <img src="../BS.Project/images/single-blog-image-bg-3.jpg" class="w-100" alt="" />
+                            <img src="images/single-blog-image-bg-3.jpg" class="w-100" alt="" />
                         </div>
                     </div>
 
