--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="../BS.Project/images/logo.png" alt="Logo"/>
+                <img src="images/logo.png" alt="Logo"/>
             </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -84,7 +84,7 @@
                   </div>
                   <div class="col-md-7 col-12">
                       <div class="about__img">
-                          <img src="../BS.Project/images/project-slide1.jpg" alt="" class="w-100"/>
+                          <img src="images/project-slide1.jpg" alt="" class="w-100"/>
                       </div>
 
                   </div>
@@ -96,7 +96,7 @@
               <div class="row">
                   <div class="col-md-4 col-12">
                     <div class="card">
-                        <img src="../BS.Project/images/service-item-bg-1.jpg" class="card-img-top" alt="..."/>
+                        <img src="images/service-item-bg-1.jpg" class="card-img-top" alt="..."/>
                         <div class="card-body">
                           <h5 class="card-title">أفضل البناء في العالم</h5>
                           <p class="card-text">أبجد هوز دولور الجلوس امات، والحيوية، بحيث تعبا وحزنا، وبعض الأشياء الهامة التي يجب. على مدى السنوات القادمة، الذين يمارسون أبجد هوز دولور الجلوس امات، والحيوية، بحيث تعبا وحزنا، وبعض الأشياء الهامة التي يجب. على مدى السنوات القادمة، الذين يمارسون</p>
@@ -106,7 +106,7 @@
                   </div>
                   <div class="col-md-4 col-12">
                     <div class="card">
-                        <img src="../BS.Project/images/service-item-bg-2.jpg" class="card-img-top" alt="...">
+                        <img src="images/service-item-bg-2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">أفضل تجديد في العالم</h5>
                           <p class="card-text">أبجد هوز دولور الجلوس امات، والحيوية، بحيث تعبا وحزنا، وبعض الأشياء الهامة التي يجب. على مدى السنوات القادمة، الذين يمارسون أبجد هوز دولور الجلوس امات، والحيوية، بحيث تعبا وحزنا، وبعض الأشياء الهامة التي يجب. على مدى السنوات القادمة، الذين يمارسون</p>
@@ -117,15 +117,15 @@
                   <div class="col-md-4 col-12">
                        <h2 class="section__title mb-4">الاخبار المهمه</h2>
                        <div class="news-left border-bottom mb-4">
-                           <img src="../BS.Project/images/news-thumb-1.jpg" alt="">
+                           <img src="images/news-thumb-1.jpg" alt="">
                            <p>البناء التطبيقات مساعدة المشرفين على البناء سحب السلامة أولا</p>
                        </div>
                        <div class="news-left border-bottom mb-4">
-                        <img src="../BS.Project/images/news-thumb-2.jpg" alt="">
+                        <img src="images/news-thumb-2.jpg" alt="">
                         <p>البناء التطبيقات مساعدة المشرفين على البناء سحب السلامة أولا</p>
                     </div>
                     <div class="news-left border-bottom mb-4">
-                        <img src="../BS.Project/images/news-thumb-3.jpg" alt="">
+                        <img src="images/news-thumb-3.jpg" alt="">
                         <p>البناء التطبيقات مساعدة المشرفين على البناء سحب السلامة أولا</p>
                     </div>
                   </div>
@@ -148,7 +148,7 @@
                   <div class="col-md-3 col-sm-6 col-12">
                       <div class="footer_item">
                           <h3>
-                          <img src="../BS.Project/images/logo.png" alt="" />
+                          <img src="images/logo.png" alt="" />
                           </h3>
                           <p>نحن مستعدون لمساعدتك دائما.</p>
                       </div>
@@ -173,13 +173,13 @@
                   <div class="col-md-3 col-sm-6 col-12">
                      <h4>المشاركات الاخيره</h4>
                      <div class="footer-left border-bottom mb-2 pb-2">
-                           <img src="../BS.Project/images/news-thumb-1.jpg" alt="">
+                           <img src="images/news-thumb-1.jpg" alt="">
                            <p>
                                البناء التطبيقات مساعدة المشرفين على البناء سحب السلامة أولا
                             </p>
                        </div>
                        <div class="footer-left border-bottom mb-2 pb-2">
-                        <img src="../BS.Project/images/news-thumb-1.jpg" alt="">
+                        <img src="images/news-thumb-2.jpg" alt="">
                         <p>
                             البناء التطبيقات مساعدة المشرفين على البناء سحب السلامة أولا
                          </p>
