--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
        <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="../BS.Project/images/logo.png" alt="Logo"/>
+                <img src="images/logo.png" alt="Logo"/>
             </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
