--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           crossorigin="anonymous">
 
           <link rel="stylesheet" href="css/style-rtl.css">
-    <title>Bootstrap Arabic Template</title>
+    <title>Bootstrap Template</title>
 </head>
 <body>
     <!--Navbar-->
