--- a/blog.html
+++ b/blog.html
@@ -189,7 +189,7 @@
                 <div class="col-md-3 col-sm-6 col-12">
                     <div class="footer_item">
                         <h3>
-                        <img src="../BS.Project/images/logo.png" alt="" />
+                        <img src="images/logo.png" alt="" />
                         </h3>
                         <p>نحن مستعدون لمساعدتك دائما.</p>
                     </div>
